weboldal style, gombok kész

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 <body>
   
   <div class="container">
-    <h1>Feladat 0312</h1>
-    <p>Kör sugarának kiszámítása</p>
-    <p>Juhász Roland, Szoft I N, 2022.02.28. ᓚᘏᗢ</p>
+    <h1>Feladat 0312🐱‍👤</h1>
+    <p>Kör sugarának kiszámítása:</p>
+    <p><br><b>Készítette:</b></br>Juhász Roland, Szoft I N, 2022.02.28. ᓚᘏᗢ</p>
     <label for="oldal">Az oldal hossza:</label>
-    <input type="text" id="anyag">
+    <input type="text" id="oldal">
     <br>
     <label for="szog">Az alfa szög hossza:</label>
-    <input type="text" id="anyag">
+    <input type="text" id="szog">
     <br>
 
     <button id="szamitgomb">Számít</button>
 
     <br>
     <div class="eredmeny">
-        <label for="eredmeny">Eredmény</label>
+        <label for="eredmeny">Eredmény:</label>
         <input type="text" id="eredmeny">
     </div>
 </div>
