style javítás, javascript elkezdés

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <h1>Feladat 0312🐱‍👤</h1>
     <p>Kör sugarának kiszámítása:</p>
-    <p><br><b>Készítette:</b></br>Juhász Roland, Szoft I N, 2022.02.28. ᓚᘏᗢ</p>
+  
     <label for="oldal">Az oldal hossza:</label>
     <input type="text" id="oldal">
     <br>
@@ -30,12 +30,14 @@
     <input type="text" id="szog">
     <br>
 
-    <button id="szamitgomb">Számít</button>
+    <button class="szamitgomb">Számít</button>
 
     <br>
     <div class="eredmeny">
         <label for="eredmeny">Eredmény:</label>
         <input type="text" id="eredmeny">
+          <p class="keszito"><br><b>Készítette:</b>
+    </br>Juhász Roland, Szoft I N, 2022.02.28. ᓚᘏᗢ</p>
     </div>
 </div>
 
