--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
 <body>
   
   <div class="container">
-    <h1>Feladat 0312🐱‍👤</h1>
+    <h1>Feladat 0312</h1>
     <p>Kör sugarának kiszámítása:</p>
   
     <label for="oldal">Az oldal hossza:</label>
     <input type="text" id="oldal">
     <br>
-    <label for="szog">Az alfa szög hossza:</label>
-    <input type="text" id="szog">
+    <label for="alfaszog">Az alfa szög hossza:</label>
+    <input type="text" id="alfaszog">
     <br>
 
-    <button class="szamitgomb">Számít</button>
+    <button id="szamitgomb">Számít</button>
 
     <br>
     <div class="eredmeny">
         <label for="eredmeny">Eredmény:</label>
         <input type="text" id="eredmeny">
           <p class="keszito"><br><b>Készítette:</b>
-    </br>Juhász Roland, Szoft I N, 2022.02.28. ᓚᘏᗢ</p>
+    </br>Juhász Roland, Szoft I N, 2022.02.28.<br> ᓚᘏᗢ</br></p>
     </div>
 </div>
 
